# DidacticGraphicsEngine

./: .clang-format  .gitignore  CMakeLists.txt  DidacticGraphicsEngine.sln  README.md
.github/workflows/: ubuntu-clang-debug-coverage.yml  ubuntu-clang-release.yml  ubuntu-clang.yml  ubuntu-coverage.yml  ubuntu.yml  windows-msvc-release.yml  windows-msvc.yml  windows.yml
Engine/: CMakeLists.txt  Engine.vcxproj
Engine/src/: engine.ixx  main.ixx
Engine/src/core/: assert.ixx  core.ixx  log.ixx  types.ixx
Engine/src/math/: math.ixx  vec2.ixx  vec3.ixx  vec4.ixx
EngineTests/: CMakeLists.txt
EngineTests/src/: main.tests.ixx
EngineTests/src/core/: assert.tests.ixx  core.tests.ixx  log.tests.ixx  types.tests.ixx
EngineTests/src/math/: math.tests.ixx  vec2.tests.ixx  vec3.tests.ixx  vec4.tests.ixx
Simple_OpenGL/: CMakeLists.txt  Simple_OpenGL.vcxproj  log.txt
Simple_OpenGL/src/: main.ixx
coverage/: coverage.assert.ixx.680af0a0de7b28d64a6b7dc886b3ba77.html  coverage.bat  coverage.functions.html  coverage.html  coverage.log.ixx.ce99a0501c1960eb398e28d05b38db0c.html  coverage.sh  coverage.types.ixx.0aeaf51b22ebc97a537fe86478275e3a.html  coverage.vec2.ixx.c90bcb7d7f48e15bc2c4c0d3e2064a81.html  coverage.vec3.ixx.d67e207ede89a693a36e5213ddb0433c.html  coverage.vec4.ixx.386ceb3b1f7675d54c9c03a6a8273720.html  coverage.xml
engine/: CMakeLists.txt
engine/src/core/: assert.ixx  log.ixx  types.ixx
engine/src/math/: vec2.ixx  vec3.ixx  vec4.ixx
samples/: CMakeLists.txt
samples/simple_opengl/: CMakeLists.txt
samples/simple_opengl/src/: main.ixx
tests/: CMakeLists.txt
tests/src/: main.tests.ixx
tests/src/core/: assert.tests.ixx  core.tests.ixx  log.tests.ixx  types.tests.ixx
tests/src/math/: vec2.tests.ixx  vec3.tests.ixx  vec4.tests.ixx
